--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Subaru/PSF-AGN Town meeting 2024">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
     <meta charset="UTF-8" />
-    <title>Conference Template</title>
+    <title>Subaru/PSF-AGN Town meeting 2024</title>
 </head>
 
 <body>
