--- a/directions/index.html
+++ b/directions/index.html
@@ -29,7 +29,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">ホーム</a>
+                <a title="Conference Home Page" href=".">ホーム</a>
             </td>
             <td class="navigation">
                 <a title="Register for the Conference" href="registration">参加登録</a>
@@ -39,7 +39,7 @@
             </td>
             
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">会場</a>
+                <a class="current" title="Directions to the Conference" href="directions">会場</a>
             </td>
             <!--
             <td class="navigation">
