--- a/program/index.html
+++ b/program/index.html
@@ -29,13 +29,13 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">ホーム</a>
+                <a title="Conference Home Page" href=".">ホーム</a>
             </td>
             <td class="navigation">
                 <a title="Register for the Conference" href="registration">参加登録</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">プログラム</a>
+                <a class="current" title="Conference Program" href="program">プログラム</a>
             </td>
             
             <td class="navigation">
