--- a/registration/index.html
+++ b/registration/index.html
@@ -61,8 +61,8 @@
     -->
     </p>
     
-    <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
-    
+    <!-- <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe> -->
+    <iframe class="registration"  src="https://docs.google.com/forms/d/e/1FAIpQLSfVqeJP5GQMUGQjmDxXG38685KjzAQMdKyPTcK5qdC8fkxH_g/viewform?embedded=true" width="640" height="1820" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
     <footer>
