--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
     <h2>主旨</h2>
     <p>
-    すばるPrime Focus Spectrograph (PFS) の観測開始がS25A (2025年2月-) に予定され、高感度かつ多天体分光観測データが大量に手に入る時代が目の前に迫っている。観測開始と合わせて計画されているPFS戦略枠観測では銀河進化 (Galaxy Evolution; GE) サーベイおよび宇宙論 (Cosmology; CO) サーベイにて数10万天体を超える銀河が観測予定であるが、そのうち1-10%、つまり少なくとも数万天体はAGNを持っていると予想される。よって、近い将来得られる大規模AGNサンプルを活かした幅広いサイエンスをあらかじめ検討し、PFS時代の到来に備えることが期待される。またSSP観測だけではなく、PFSの持つ幅広い波長域、深い感度、および広視野を活かした共同利用枠観測の検討も同等に重要である。<br />
+    すばるPrime Focus Spectrograph (PFS) の観測開始がS25A (2025年2月-) に予定され、高感度かつ多天体分光観測データが大量に手に入る時代が目の前に迫っている。観測開始と合わせて計画されているPFS戦略枠 (SSP) 観測では銀河進化 (Galaxy Evolution; GE) サーベイおよび宇宙論 (Cosmology; CO) サーベイにて数10万天体を超える銀河が観測予定であるが、そのうち1-10%、つまり少なくとも数万天体はAGNを持っていると予想される。よって、近い将来得られる大規模AGNサンプルを活かした幅広いサイエンスをあらかじめ検討し、PFS時代の到来に備えることが重要である。またSSP観測だけではなく、PFSの持つ幅広い波長域、深い感度、および広視野を活かした一般共同利用枠観測の検討も同等に重要である。<br />
     </p>
     <p>
-    本タウンミーティングでは、すばるPFS戦略枠観測 (SSPサーベイ) およびGE, COサーベイの重要なパラメータスペースについての概略を把握できる機会を日本人コミュニティに提供することで、今までPFS-AGNサイエンスについて触れてきた研究者だけでなく、これから新たにPFS観測に深く関わり、PFS-AGNサイエンスを将来的に担う日本にいる大学院生 (および2024年度が大学院生となる学部生) のエントリーミーティングともなることを目標とする。また、PFS-AGNサイエンスを検討、アイデアを出し合い議論できる機会を提供する。SSPサーベイをベースとした研究提案だけでなく、共同枠を利用したPFS-AGN観測提案、PFSと各種多波長サーベイ (Euclid, eROSITA等) と組み合わせた観測提案についても歓迎する。
+    本タウンミーティングでは、すばるPFS戦略枠観測 (SSPサーベイ, 特にGE, COサーベイ) の重要なパラメータスペースについての概略を把握できる機会を日本人コミュニティに提供することで、今までPFS-AGNサイエンスについて触れてきた研究者だけでなく、これから新たにPFS観測に深く関わり、PFS-AGNサイエンスを将来的に担う日本にいる大学院生 (および2024年度が大学院生となる学部生) のエントリーミーティングともなることを目標とする。また、PFS-AGNサイエンスを検討、アイデアを出し合い議論できる機会を提供する。SSPサーベイをベースとした研究提案だけでなく、一般共同利用枠を利用したPFS-AGN観測提案、PFSと各種多波長サーベイ (Euclid, eROSITA等) と組み合わせた観測提案についても歓迎する。
 
     </p>
     
@@ -70,7 +70,7 @@
 
     <h2> 招待講演者 </h2>
     <p>
-        To be announced
+        TBA
     </p>
 
 
