--- a/program/index.html
+++ b/program/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <base href="..">
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
-    <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
+    <!-- <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/> -->
+    <link rel="shortcut icon"  href="assets/BH_img2.jpg"/>
     <meta name="description" content="Subaru/PSF-AGN Town meeting 2024">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
