--- a/directions/index.html
+++ b/directions/index.html
@@ -11,13 +11,15 @@
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
     <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
     <title>Directions | Subaru/PSF-AGN Town meeting 2024</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <!-- <img src="assets/banner.jpg" alt="Conference Template Banner"> -->
+        <img src="assets/banner_Waseda_2.jpg" width="1000" alt="Conference Banner">
         <div class="top-left">
             <span class="title2"> 第一回　PSF-AGN タウンミーティング </span>
         </div>
@@ -53,7 +55,7 @@
 
     <h2>会場へのアクセス</h2>
     <p>
-    東京メトロ副都心線　西早稲田駅: 徒歩4分 <br>
+    東京メトロ副都心線　西早稲田駅: 出口3より徒歩4分 <br>
     JR　高田馬場駅: 徒歩12分 <br>
 
     </p>
