--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <!-- <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/> -->
     <link rel="shortcut icon"  href="assets/BH_img2.jpg"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Subaru/PSF-AGN Town meeting 2024">
+    <meta name="description" content="Subaru/PSF-AGN Town Meeting 2024">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
     <meta charset="UTF-8" />
-    <title>Subaru/PSF-AGN Town meeting 2024</title>
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
+    <title>Subaru/PSF-AGN Town Meeting 2024</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <!-- <img src="assets/banner.jpg" alt="Conference Template Banner"> -->
+        <img src="assets/banner_Waseda_2.jpg" width="1000" alt="Conference Banner">
         <div class="top-left">
             <span class="title2"> 第一回　PSF-AGN タウンミーティング </span>
         </div>
