--- a/program/index.html
+++ b/program/index.html
@@ -13,13 +13,15 @@
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
     <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
     <title>Program | Subaru/PSF-AGN Town meeting 2024</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <!-- <img src="assets/banner.jpg" alt="Conference Template Banner"> -->
+        <img src="assets/banner_Waseda_2.jpg" width="1000" alt="Conference Banner">
         <div class="top-left">
             <span class="title2"> 第一回　PSF-AGN タウンミーティング </span>
         </div>
