--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <!-- <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/> -->
     <link rel="shortcut icon"  href="assets/BH_img2.jpg"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Subaru/PSF-AGN Town Meeting 2024">
+    <meta name="description" content="Subaru/PFS-AGN Town Meeting 2024">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
-    <title>Subaru/PSF-AGN Town Meeting 2024</title>
+    <title>Subaru/PFS-AGN Town Meeting 2024</title>
 </head>
 
 <body>
 
     <div class="banner">
         <!-- <img src="assets/banner.jpg" alt="Conference Template Banner"> -->
-        <img src="assets/banner_Waseda_2.jpg" width="1000" alt="Conference Banner">
+        <img src="assets/banner_Waseda_3.jpg" width="1000" alt="Conference Banner">
         <div class="top-left">
-            <span class="title2"> 第一回　PSF-AGN タウンミーティング </span>
+            <span class="title2"> 第一回　PFS-AGN タウンミーティング </span>
         </div>
         <div class="bottom-right">
             2024年 3/4（月） <br> 早稲田大学 西早稲田キャンパス
