invited speakers updated

--- a/index.html
+++ b/index.html
@@ -72,14 +72,17 @@
 
     <h2> 招待講演者 </h2>
     <p>
-        TBA
+    
+    砂山朋美 (Univ. of Arizona)
+    播金優一 (東大宇宙線研)
+    鈴木智子 (東大Kavli IPMU)
     </p>
 
 
 
     <h2> SOC / LOC </h2>
     <p>
-        市川幸平（早稲田大; co-chair）、尾上匡房（Kavli IPMU; co-chair）、長尾透 (愛媛大)、松岡良樹 (愛媛大)、鳥羽儀樹 (NAOJ)、今西昌俊 (NAOJ)、泉拓磨 (NAOJ)
+        市川幸平（早稲田大; co-chair）、尾上匡房（東大Kavli IPMU; co-chair）、長尾透 (愛媛大)、松岡良樹 (愛媛大)、鳥羽儀樹 (NAOJ)、今西昌俊 (NAOJ)、泉拓磨 (NAOJ)
 
     </p>
 
