invited speakers updated

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <h2> 招待講演者 </h2>
     <p>
     
-    砂山朋美 (Univ. of Arizona)
-    播金優一 (東大宇宙線研)
+    砂山朋美 (Univ. of Arizona) <br />
+    播金優一 (東大宇宙線研) <br />
     鈴木智子 (東大Kavli IPMU)
     </p>
 
