front page updated

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     
     砂山朋美 (Univ. of Arizona) <br />
     播金優一 (東大宇宙線研) <br />
-    鈴木智子 (東大Kavli IPMU)
+    鈴木智子 (東大Kavli IPMU) <br />
+    鳥羽儀樹 (NAOJ)
     </p>
 
 
