front page updated

--- a/registration/index.html
+++ b/registration/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <base href="..">
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+    <!-- <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/> -->
+        
+    <link rel="shortcut icon"  href="assets/BH_img2.jpg"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <meta name="description" content="Subaru/PFS-AGN Town meeting 2024">
     <meta name="resource-type" content="document">
@@ -23,7 +25,7 @@
             <span class="title2"> 第一回　PFS-AGN タウンミーティング </span>
         </div>
         <div class="bottom-right">
-            2024年 3/4（月） <br> 早稲田大学 西早稲田キャンパス
+            2024年 3月 4日（月） <br> 早稲田大学 西早稲田キャンパス
 
         </div>
     </div>
