--- a/program/index.html
+++ b/program/index.html
@@ -26,7 +26,7 @@
             <span class="title2"> 第一回　PFS-AGN タウンミーティング </span>
         </div>
         <div class="bottom-right">
-            2024年 3/4（月） <br> 早稲田大学 西早稲田キャンパス
+            2024年 3月 4日（月） <br> 早稲田大学 西早稲田キャンパス
 
         </div>
     </div>
