front page updated

--- a/program/index.html
+++ b/program/index.html
@@ -23,7 +23,7 @@
         <!-- <img src="assets/banner.jpg" alt="Conference Template Banner"> -->
         <img src="assets/banner_Waseda_3.jpg" width="1000" alt="Conference Banner">
         <div class="top-left">
-            <span class="title2"> 第一回　PFS-AGN タウンミーティング </span>
+            <span class="title2"> 第１回　PFS-AGN タウンミーティング </span>
         </div>
         <div class="bottom-right">
             2024年 3月 4日（月） <br> 早稲田大学 西早稲田キャンパス
