--- a/directions/index.html
+++ b/directions/index.html
@@ -44,6 +44,10 @@
             <td class="navigation">
                 <a class="current" title="Directions to the Conference" href="directions">会場</a>
             </td>
+            <td class="navigation">
+                <a title="Documents" href="docs">参考資料</a>
+            </td>
+
             <!--
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
@@ -52,8 +56,12 @@
         </tr>
     </table>
 
+    <h2>会場</h2>
 
-    <h2>会場へのアクセス</h2>
+    早稲田大学西早稲田キャンパス62号館1階 大会議室A　<br>
+    （早稲田キャンパスではないので注意）
+
+    <h2>アクセス</h2>
     <p>
     東京メトロ副都心線　西早稲田駅: 出口3より徒歩4分 <br>
     JR　高田馬場駅: 徒歩12分 <br>
