--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <td class="navigation">
                 <a title="Directions to the Conference" href="directions">会場</a>
             </td>
+            <td class="navigation">
+                <a title="Documents" href="docs">参考資料</a>
+            </td>
+
             <!--
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
