--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
             <td class="navigation">
                 <a title="Directions to the Conference" href="directions">会場</a>
             </td>
+
+            <td class="navigation">
+                <a title="Participants" href="participants">参加者</a>
+            </td>
+
             <td class="navigation">
                 <a title="Documents" href="docs">参考資料</a>
             </td>
