--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
         市川幸平（早稲田大; co-chair）、尾上匡房（東大Kavli IPMU; co-chair）、長尾透 (愛媛大)、松岡良樹 (愛媛大)、鳥羽儀樹 (NAOJ)、今西昌俊 (NAOJ)、泉拓磨 (NAOJ)
 
     </p>
+    
+    
+    <h2> 集合写真 </h2>
+    <p>
+        <img src="./IMG_9301.jpg" width="90%">
+        <img src="./IMG_9302.jpg" width="90%">
+    </p>
+
 
     <footer>
         &copy; M.Onoue, K.Ichikawa
