--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         </tr>
     </table>
 
+    <h2>第二回開催予定: 2025年 3月3日 - 4日 （場所: 国立天文台）</h2>
+    <p>
+    <a href="https://mitsurukokubo.github.io/PFSAGN_townmtg2025/">リンク</a>
+    </p>
+
+
     <h2>主旨</h2>
     <p>
     すばるPrime Focus Spectrograph (PFS) の観測開始がS25A (2025年2月-) に予定され、高感度かつ多天体分光観測データが大量に手に入る時代が目の前に迫っている。観測開始と合わせて計画されているPFS戦略枠 (SSP) 観測では銀河進化 (Galaxy Evolution; GE) サーベイおよび宇宙論 (Cosmology; CO) サーベイにて数10万天体を超える銀河が観測予定であるが、そのうち1-10%、つまり少なくとも数万天体はAGNを持っていると予想される。よって、近い将来得られる大規模AGNサンプルを活かした幅広いサイエンスをあらかじめ検討し、PFS時代の到来に備えることが重要である。またSSP観測だけではなく、PFSの持つ幅広い波長域、深い感度、および広視野を活かした一般共同利用枠観測の検討も同等に重要である。<br />
